Update API point in serving model, fix minor layout issues

--- a/frontend/src/pages/dataProjects/DataProjects.scss
+++ b/frontend/src/pages/dataProjects/DataProjects.scss
@@ -30,6 +30,9 @@
         column-gap: var(--pf-global--spacer--lg);
       }
     }
+    &-api-endpoint {
+      margin-top: var(--pf-global--spacer--md);
+    }
   }
   &__storage-progress {
     width: 75%;
